# MulleFoundationBase

./: .gitignore  CMakeLists.txt  MulleFoundationBase.sublime-project  README.md  RELEASENOTES.md  clib.json
.github/workflows/: semgrep.yml
asset/dox/: TOC.md
assets/dox/: TOC.md
cmake/: InstallCMakeInclude.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/share/: CreateDepsIncObjC.cmake  CreateLoaderIncObjC.cmake  ExecutableObjC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake
cola/: config.plist  constituents.md.bud  description.md.bud  mulle-sde.md.bud  properties.plist
src/: MulleFoundationBase.h
src/MulleObjCArchiverFoundation/: MulleObjCArchiver-Private.h  MulleObjCArchiver.h  MulleObjCArchiver.m  MulleObjCArchiverFoundation.h  MulleObjCDeps+MulleObjCArchiverFoundation.h  MulleObjCDeps+MulleObjCArchiverFoundation.m  MulleObjCLoader+MulleObjCArchiverFoundation.h  MulleObjCLoader+MulleObjCArchiverFoundation.m  MulleObjCStreamArchiver.h  MulleObjCStreamArchiver.m  MulleObjCStreamUnarchiver.h  MulleObjCStreamUnarchiver.m  MulleObjCUnarchiver.h  MulleObjCUnarchiver.m  NSArchiver+OSBase.h  NSArchiver+OSBase.m  NSArchiver.h  NSArchiver.m  NSCoder.h  NSCoder.m  NSKeyedArchiver.h  NSKeyedArchiver.m  NSKeyedUnarchiver.h  NSKeyedUnarchiver.m  NSObject+NSCoder.h  NSObject+NSCoder.m  NSUnarchiver.h  NSUnarchiver.m  TOC.md  _MulleObjCArchiverFoundation-export.h  _MulleObjCArchiverFoundation-import-private.h  _MulleObjCArchiverFoundation-import.h  _MulleObjCArchiverFoundation-include-private.h  _MulleObjCArchiverFoundation-include.h  _MulleObjCArchiverFoundation-versioncheck.h  import-private.h  import.h  include-private.h  include.h  mulle-buffer-archiver.h  (+2 more)
src/MulleObjCContainerFoundation/: MulleObjCContainerFoundation.h  MulleObjCLoader+MulleObjCContainerFoundation.h  MulleObjCLoader+MulleObjCContainerFoundation.m  MullePreempt.h  NSArray+NSCoder.h  NSArray+NSCoder.m  NSArray-Private.h  NSArray.h  NSArray.m  NSDictionary+NSArray.h  NSDictionary+NSArray.m  NSDictionary+NSCoder.h  NSDictionary+NSCoder.m  NSDictionary.h  NSDictionary.m  NSEnumerator+NSArray.h  NSEnumerator+NSArray.m  NSEnumerator.h  NSEnumerator.m  NSMutableArray+NSSet.h  NSMutableArray+NSSet.m  NSMutableArray.h  NSMutableArray.m  NSMutableDictionary+NSArray.h  NSMutableDictionary+NSArray.m  NSMutableDictionary.h  NSMutableDictionary.m  NSMutableSet+NSArray.h  NSMutableSet+NSArray.m  NSMutableSet.h  NSMutableSet.m  NSSet+NSArray.h  NSSet+NSArray.m  NSSet+NSCoder.h  NSSet+NSCoder.m  NSSet.h  NSSet.m  NSThread+NSMutableDictionary.h  NSThread+NSMutableDictionary.m  _MulleObjCArrayEnumerator.h  (+51 more)
src/MulleObjCKVCFoundation/: MulleObjCContainerKeyValueCoding.h  MulleObjCContainerKeyValueCoding.m  MulleObjCDeps+MulleObjCKVCFoundation.h  MulleObjCDeps+MulleObjCKVCFoundation.m  MulleObjCKVCFoundation-standalone.m  MulleObjCKVCFoundation.h  MulleObjCLoader+MulleObjCKVCFoundation.h  MulleObjCLoader+MulleObjCKVCFoundation.m  NSArray+KeyValueCoding.m  NSArray+MulleObjCKVCArithmetic.m  NSDictionary+KeyValueCoding.m  NSMutableDictionary+KeyValueCoding.m  NSNumber+MulleObjCKVCArithmetic.h  NSNumber+MulleObjCKVCArithmetic.m  NSObject+KVCSupport.h  NSObject+KVCSupport.m  NSObject+KeyValueCoding.h  NSObject+KeyValueCoding.m  NSObject+_MulleObjCKVCInformation.h  NSObject+_MulleObjCKVCInformation.m  NSProxy+_MulleObjCKVCInformation.m  NSSet+KeyValueCoding.m  NSSortDescriptor+NSKeyValueCoding.m  TOC.md  _MulleObjCInstanceVariableAccess.h  _MulleObjCInstanceVariableAccess.m  _MulleObjCKVCFoundation-export.h  _MulleObjCKVCFoundation-import-private.h  _MulleObjCKVCFoundation-import.h  _MulleObjCKVCFoundation-include-private.h  _MulleObjCKVCFoundation-include.h  _MulleObjCKVCFoundation-provide.h  _MulleObjCKVCFoundation-versioncheck.h  _MulleObjCKVCInformation.h  _MulleObjCKVCInformation.m  import-private.h  import.h  include-private.h  include.h  objc-deps.inc  (+1 more)
src/MulleObjCLockFoundation/: MulleObjCLoader+MulleObjCLockFoundation.h  MulleObjCLoader+MulleObjCLockFoundation.m  MulleObjCLockFoundation.h  NSCondition+NSDate.h  NSCondition+NSDate.m  NSCondition.h  NSCondition.m  NSConditionLock+NSDate.h  NSConditionLock+NSDate.m  NSConditionLock.h  NSConditionLock.m  NSLock+NSDate.h  NSLock+NSDate.m  NSLock.h  NSLock.m  NSLocking.h  NSRecursiveLock.h  NSRecursiveLock.m  (+9 more)
(+411 files in other folders)
